# ginai_english

./: .env.example  .gitignore  CUSTOMER_REPORT.md  CUSTOMER_SUMMARY.md  Dockerfile  OPERATIONS.md  README.md  business_requirements.md  docker-compose.yml  gai.conf  prompts_doc.md  pyproject.toml  technical_specification.md  xray-config.example.json  письмо.txt
.github/workflows/: deploy.yml
app/: config.py  main.py
app/bot/: handlers.py  keyboards.py
app/crm/: bitrix_client.py  deal_builder.py
app/dialog/: engine.py  guardrails.py
app/dialog/prompts/: summary_for_crm.txt  system.txt
app/kb/: cache.py  schema.py  yandex_client.py
app/llm/: client.py  tools.py
app/notifications/: managers_chat.py
app/scripts/: reset_memory.py
app/state/: db.py  models.py  repository.py
app/utils/: logging.py  pii_mask.py  time.py  working_hours.py
docs/: architecture.md  kb_template.xlsx
scripts/: build_kb_template.py
tests/: conftest.py  manual_test_cases.md
tests/unit/: test_calendar_block.py  test_deal_builder.py  test_guardrails.py  test_holidays.py  test_phone_normalization.py  test_pii_mask.py  test_reset_memory.py  test_working_hours.py  test_xlsx_parser.py  test_xlsx_robustness.py
